[tool.poetry]
name = "ben_py_utils"
version = "0.2.0"
description = ""
authors = ["Charles Gauvin"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

  
  
[tool.poetry.dependencies]
python = "^3.9"
brotlipy = "*"
munkres = "*"
myst-nb = "*"
pathlib = "*"
pyarrow = "*"
pyopenssl = "*"
pysocks = "*"
typing = "*"
unicodedata2 = "*"
folium = {version = "*", optional = true}
gendocs = {version = "*", optional = true}
mapclassify = {version = "*", optional = true}
matplotlib = {version = "*", optional = true}
pytest = {version = "*", optional = true} 

[tool.poetry.group.notebooks.dependencies]
matplotlib= "*"
seaborn= "*"
folium= "*"
mapclassify= "*"
contextily= "*"
xyzservices= "*"

[tool.poetry.group.docs.dependencies]
gendocs= "*"

[tool.poetry.group.test.dependencies]
pytest = "*"


